<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorNegro"
    tools:context=".activitys.login.LoginActivity">


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/topView"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:background="@color/colorBlanco"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view5"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:background="@drawable/wave_onda"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/topView" />


            <ImageView
                android:id="@+id/logoapp"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_marginTop="40dp"
                android:contentDescription="@string/logotipo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logonegrocirculo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="38dp"
                android:fontFamily="@font/berlin"
                android:gravity="center"
                android:text="@string/astro_pollo"
                android:textColor="@color/colorBlanco"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logoapp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/motorista"
                android:textColor="@color/colorBlanco"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view5" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    app:cardCornerRadius="25dp"
                    app:cardElevation="10dp"
                    app:cardUseCompatPadding="true">


                    <LinearLayout
                        android:id="@+id/logInLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="25dp">


                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/inputUsuario"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginRight="5dp"
                            android:hint="@string/usuario"
                            app:boxStrokeColor="@color/colorGrisv2"
                            app:boxStrokeWidth="1dp"
                            app:hintTextColor="@color/colorGrisv2"
                            app:shapeAppearanceOverlay="@style/Button4">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/inputEditUsuario"
                                android:layout_width="match_parent"
                                android:layout_height="48dp"
                                android:drawableStart="@drawable/icono_usuario_gris"
                                android:drawablePadding="10dp"
                                android:ems="12"
                                android:inputType="textPersonName|textEmailAddress"
                                android:maxLength="20"
                                android:paddingStart="8dp"
                                android:paddingTop="4dp"
                                android:paddingEnd="8dp"
                                android:paddingBottom="3dp"
                                android:textColor="@color/black"
                                android:textSize="14sp"
                                android:textStyle="normal" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/inputPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="15dp"
                            android:layout_marginRight="5dp"
                            android:hint="@string/contrasena"
                            app:boxStrokeColor="#4E4A4A"
                            app:boxStrokeWidth="1dp"
                            app:endIconMode="password_toggle"
                            app:hintTextColor="#4E4A4A"
                            app:shapeAppearanceOverlay="@style/Button4">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/inputEditPassword"
                                android:layout_width="match_parent"
                                android:layout_height="48dp"
                                android:drawableStart="@drawable/icono_candado_gris"
                                android:drawablePadding="10dp"
                                android:ems="12"
                                android:inputType="textPassword"
                                android:maxLength="16"
                                android:paddingStart="8dp"
                                android:paddingTop="4dp"
                                android:paddingEnd="8dp"
                                android:paddingBottom="3dp"
                                android:textColor="@color/black"
                                android:textSize="14sp"
                                android:textStyle="normal" />
                        </com.google.android.material.textfield.TextInputLayout>



                        <Button
                            android:id="@+id/btnIniciarSesion"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="24dp"
                            android:layout_marginTop="30dp"
                            android:layout_marginEnd="24dp"
                            android:layout_marginBottom="10dp"
                            android:background="@drawable/button_round_rojo"
                            android:elevation="15dp"
                            android:gravity="center"
                            android:text="@string/iniciar_sesion"
                            android:textAllCaps="false"
                            android:textColor="@color/colorBlanco"
                            android:textSize="17sp"
                            app:backgroundTint="@color/pinkColor"
                            app:shapeAppearanceOverlay="@style/Button5" />



                    </LinearLayout>


                </androidx.cardview.widget.CardView>


            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>





</RelativeLayout>